--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nat Welch dot com</title>
 
     <!-- Meta SEO Shit -->
-    <meta name="description" content="Nathaniel 'Nat' Welch, Software Reconnaissance Engineer extrordinair." />
+    <meta name="description" content="The website of Nathaniel 'Nat' Welch, Software Reconnaissance Engineer extrordinair." />
     <meta name="keywords" content="Nat, welch, natwelch, nathaniel, nathanielwelch, dehn, code, student, developer, software" />
     <meta name="author" content="Nat Welch">
 
@@ -116,7 +116,7 @@
         Attempting to promote communication, creativity and sharing on the Internet.
         </p>
         <p class="f5 f2-ns mw8 measure lh-copy">
-        I like automating things and building software tools to make maintaing dynamic websites easier.
+        I like automating things and building software tools to make maintaining dynamic websites easier.
         </p>
         <p class="f5 f2-ns mw7 measure lh-copy">
         Advocate for transparency, remix culture and open source software.
@@ -176,7 +176,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="/js/moment.min.js?v=2.11.1"></script>
-    <script src="/js/nat.js?v=2016-01-24"></script>
+    <script src="/js/nat.js?v=2016-02-03"></script>
 
     <!-- Copyright Nat Welch 2003 - 2016 -->
   </body>
