add resume link

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
         <p class="f5 f2-ns mw7 measure lh-copy">
         My most well known projects are <a href="http://mood.natwelch.com/">mood.natwelch.com</a>, <a href="http://www.sadnat.com/">sadnat.com</a> and <a href="https://github.com/fog/fog-google">fog-google</a>.
         </p>
+
+        <p class="f5 f2-ns mw7 measure lh-copy">
+        I've documented my professional work on <a href="http://resume.natwelch.com">my resume</a>.
+        </p>
       </div>
     </div>
     </section>
