--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <header class="pvx phm pal-m paxl-l oh pos-rel">
     <div class="dt wi-100">
       <div class="dtc wi-50 v-mid">
-        <img src="/i/dots.png" class="v-mid mhn di-ns dn phn w4-ns w3" alt="Nat? Nat. Nat!">
-        <div class="dib v-mid pas pan-ns">
+        <img src="/i/dots.png" class="v-mid mhn dib-ns phn w4-ns dn" alt="Nat? Nat. Nat!">
+        <div class="dib v-mid pan">
           <h1 class="normal measure lh-copy man">Nat Welch</h1>
           <h2 class="normal ttu f4 man">Software Reconnaissance Engineer</h2>
         </div>
