--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
       <div>
         <h1 class="small ttu fw4">What</h1>
         <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
-        Attempting to promote communication, creativity and sharing on the Internet.
+        Promoting communication, creativity and sharing on the Internet.
         </p>
         <p class="f5 f2-ns mw8 measure lh-copy">
-        I like automating things and building software tools to make maintaining dynamic websites easier.
+        Automating things and building software tools to make maintaining dynamic websites easier.
         </p>
         <p class="f5 f2-ns mw7 measure lh-copy">
-        Advocate for transparency, remix culture and open source software.
+        Advocating for transparency, remix culture and open source software.
         </p>
       </div>
     </div>
@@ -153,7 +153,7 @@
     <section class="cf">
     <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
       <div>
-        <h1 class="small ttu fw4">Other</h1>
+        <h1 class="small ttu fw4">Projects</h1>
         <p class="f5 f2-ns mw7 measure lh-copy">
         I post photos with varying consistency on <a href="https://www.flickr.com/photos/icco/">Flickr</a>.
         </p>
@@ -167,7 +167,7 @@
         </p>
 
         <p class="f5 f2-ns mw7 measure lh-copy">
-        My most well known projects are <a href="http://mood.natwelch.com/">mood.natwelch.com</a>, <a href="http://www.sadnat.com/">sadnat.com</a> and <a href="https://github.com/fog/fog-google">fog-google</a>.
+        My most well known creations are <a href="http://mood.natwelch.com/">mood.natwelch.com</a>, <a href="http://www.sadnat.com/">sadnat.com</a> and <a href="https://github.com/fog/fog-google">fog-google</a>.
         </p>
 
         <p class="f5 f2-ns mw7 measure lh-copy">
