--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         Promoting communication, creativity and sharing on the Internet.
         </p>
         <p class="f5 f2-ns mw8 measure lh-copy">
-        Automating things and building software tools to make maintaining dynamic websites easier.
+        Automating things and building software tools to make maintaining the internet easier.
         </p>
         <p class="f5 f2-ns mw7 measure lh-copy">
         Advocating for transparency, remix culture and open source software.
