--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
         <p class="f5 f2-ns mw7 measure lh-copy">
         I've documented my professional work on <a href="http://resume.natwelch.com">my resume</a>.
         </p>
+
+        <p class="f5 f2-ns mw7 measure lh-copy">
+        Checkout the<a href="https://ringdirector.herokuapp.com/next">next site</a> in my WebRing</a>!
+        </p>
       </div>
     </div>
     </section>
