--- a/resume/index.html
+++ b/resume/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv="refresh" content="0; url=https://icco.github.io/Resume/" />
+  <meta http-equiv="refresh" content="0; url=https://resume.natwelch.com" />
 </head>
