--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/tachyons.min.css?date=20151014">
-    <style>
-      body {
-        font-size: 1.35rem;
-      }
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.3.1/css/tachyons.min.css"/>
 
+    <style>
       img {
         display: block;
       }
@@ -74,15 +71,6 @@
       a.btn {
         cursor: pointer;
       }
-
-      /* Starting layout */
-      #one {
-        display: block;
-      }
-
-      #two, #three {
-        display: none;
-      }
     </style>
 
     <!-- Webmention -->
@@ -94,13 +82,13 @@
     <![endif]-->
   </head>
   <body class="sans-serif">
-    <header class="pvx phm pal-m paxl-l oh pos-rel">
+    <header class="pvx ph3 pa4-m pa5-l oh pos-rel">
     <div class="dt wi-100">
       <div class="dtc wi-50 v-mid">
-        <img src="/i/dots.png" class="v-mid mhn dib-ns phn w4-ns dn" alt="Nat? Nat. Nat!">
-        <div class="dib v-mid pan">
-          <h1 class="normal measure lh-copy man">Nat Welch</h1>
-          <h2 class="normal ttu f4 man">Software Reconnaissance Engineer</h2>
+        <img src="/i/dots.png" class="v-mid mh0 dib-ns ph0 w4-ns dn" alt="Nat? Nat. Nat!">
+        <div class="dib v-mid pa0">
+          <h1 class="mb2">Nat Welch</h1>
+          <h2 class="fw2 mt0">Software Reconnaissance Engineer</h2>
         </div>
       </div>
     </div>
