--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       a, a:link, a:visited {
         transition: color .4s;
         color: #265C83;
+        cursor: pointer;
       }
 
       a:hover {
@@ -66,10 +67,6 @@
       a:active {
         transition: color .3s;
         color: #007BE6;
-      }
-
-      a.btn {
-        cursor: pointer;
       }
     </style>
 
@@ -82,13 +79,13 @@
     <![endif]-->
   </head>
   <body class="sans-serif">
-    <header class="pvx ph3 pa4-m pa5-l oh pos-rel">
+    <header class="pv0 ph3 pa4-m pa5-l oh pos-rel">
     <div class="dt wi-100">
       <div class="dtc wi-50 v-mid">
         <img src="/i/dots.png" class="v-mid mh0 dib-ns ph0 w4-ns dn" alt="Nat? Nat. Nat!">
         <div class="dib v-mid pa0">
-          <h1 class="mb2">Nat Welch</h1>
-          <h2 class="fw2 mt0">Software Reconnaissance Engineer</h2>
+          <h1 class="mb2 tracked">Nat Welch</h1>
+          <h2 class="fw2 mt0 tracked">Software Reconnaissance Engineer</h2>
         </div>
       </div>
     </div>
@@ -96,73 +93,67 @@
 
     <main>
 
-    <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
-      <div>
-        <h1 class="small ttu fw4">What</h1>
-        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
-        Promoting communication, creativity and sharing on the Internet.
-        </p>
-        <p class="f5 f2-ns mw8 measure lh-copy">
-        Automating things and building software tools to make maintaining the internet easier.
-        </p>
-        <p class="f5 f2-ns mw7 measure lh-copy">
-        Advocating for transparency, remix culture and open source software.
-        </p>
-      </div>
+    <section class="cf lh-copy">
+    <div class="fl-l wi-50-l ph3 pv4 pa3-m pa5-l">
+      <h1 class="fw1 tracked">What</h1>
+
+      <p class="f3 f2-l measure w8-l mt3">
+      Promoting communication, creativity and sharing on the Internet.
+      </p>
+      <p class="f3 f2-l measure w8-l mt3">
+      Automating things and building software tools to make maintaining the internet easier.
+      </p>
+      <p class="f3 f2-l measure w8-l mt3">
+      Advocating for transparency, remix culture and open source software.
+      </p>
     </div>
     </section>
 
-    <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
-      <div>
-        <h1 class="small ttu fw4">Who</h1>
-        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
+    <section class="cf lh-copy">
+    <div class="fl-l wi-50-l ph3 pv4 pa3-m pa5-l">
+      <h1 class="fw1 tracked">Who</h1>
+      <p class="f3 f2-l measure w8-l mt3">
         A <span id="age">28</span> year old from the San Francisco Bay Area, now living in Brooklyn and working for <a href="https://hillaryclinton.com">Hillary For America</a>.
-        </p>
-      </div>
+      </p>
     </div>
     </section>
 
-    <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
-      <div>
-        <h1 class="small ttu fw4">Writing</h1>
-        <p class="f3 f2-m f1-l f2-xl measure lh-copy mw8-xl mtm">
-        I write once or twice a week at <a href="https://writing.natwelch.com" rel="me">writing.natwelch.com</a>.
-        </p>
+    <section class="cf lh-copy">
+    <div class="fl-l wi-50-l ph3 pv4 pa3-m pa5-l">
+      <h1 class="fw1 tracked">Writing</h1>
+      <p class="f3 f2-l measure w8-l mt3">
+      I write once or twice a week at <a href="https://writing.natwelch.com" rel="me">writing.natwelch.com</a>.
+      </p>
 
-        <ul id="posts" class="f5 f2-ns mw7 measure lh-copy">
-        </ul>
-      </div>
+      <ul id="posts" class="f3 f2-l measure w8-l mt3">
+      </ul>
     </div>
     </section>
 
-    <section class="cf">
-    <div class="fl-xl wi-50-xl phm pvl pal-m paxl-l plxl-xl">
-      <div>
-        <h1 class="small ttu fw4">Projects</h1>
-        <p class="f5 f2-ns mw7 measure lh-copy">
+    <section class="cf lh-copy">
+      <div class="fl-l wi-50-l ph3 pv4 pa3-m pa5-l">
+        <h1 class="fw1 tracked">Projects</h1>
+
+        <p class="f3 f2-l measure w8-l mt3">
         I post photos with varying consistency on <a href="https://www.flickr.com/photos/icco/">Flickr</a>.
         </p>
 
-        <p class="f5 f2-ns mw7 measure lh-copy">
+        <p class="f3 f2-l measure w8-l mt3">
         I try to be randomly clever on <a href="https://twitter.com/icco">Twitter</a>.
         </p>
 
-        <p class="f5 f2-ns mw7 measure lh-copy">
+        <p class="f3 f2-l measure w8-l mt3">
         I publish code on <a href="https://github.com/icco">Github</a>.
         </p>
 
-        <p class="f5 f2-ns mw7 measure lh-copy">
+        <p class="f3 f2-l measure w8-l mt3">
         My most well known creations are <a href="http://mood.natwelch.com/">mood.natwelch.com</a>, <a href="http://www.sadnat.com/">sadnat.com</a> and <a href="https://github.com/fog/fog-google">fog-google</a>.
         </p>
 
-        <p class="f5 f2-ns mw7 measure lh-copy">
+        <p class="f3 f2-l measure w8-l mt3">
         I've documented my professional work on <a href="http://resume.natwelch.com">my resume</a>.
         </p>
       </div>
-    </div>
     </section>
     </main>
 
