--- a/index.html
+++ b/index.html
@@ -74,20 +74,19 @@
     <!-- https://writing.natwelch.com/ -->
   </head>
   <body class="sans-serif">
-    <header class="pv0 ph3 pa4-m pa5-l oh pos-rel">
+    <header class="pv0 ph3 pa4-m pa5-l oh pos-rel mt0-ns mt4">
       <div class="dt wi-100">
         <div class="dtc wi-50 v-mid">
-          <img src="/i/dots.png" class="v-mid mh0 dib-ns ph0 w4-ns dn" alt="Nat? Nat. Nat!">
+          <img src="/i/dots.png" class="v-mid mh0-ns dib-ns center ph0 w4" alt="Nat? Nat. Nat!">
           <div class="dib v-mid pa0">
-            <h1 class="mb2 tracked">Nat Welch</h1>
-            <h2 class="fw2 mt0 tracked">Software Reconnaissance Engineer</h2>
+            <h1 class="mb2 tracked tl-ns tc w-100">Nat Welch</h1>
+            <h2 class="fw2 mt0 tracked tl-ns tc w-100">Software Reconnaissance Engineer</h2>
           </div>
         </div>
       </div>
     </header>
 
     <main>
-
     <section class="cf lh-copy">
       <div class="fl-l wi-50-l ph3 pv4 pa3-m pa5-l">
         <h1 class="fw1 tracked">What</h1>
