--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.3.1/css/tachyons.min.css"/>
+    <link rel="stylesheet" href="/css/tachyons.min.css?v=4.3.1"/>
 
     <style>
       img {
