--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
         </p>
 
         <p class="f3 f2-l measure w8-l mt3">
-        I've documented my professional work on <a href="http://resume.natwelch.com">my resume</a>.
+        I have documented my professional work on <a href="http://resume.natwelch.com">my resume</a>.
         </p>
       </div>
     </section>
     </main>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="/js/jquery.min.js?v=2.2.0"></script>
     <script src="/js/moment.min.js?v=2.11.1"></script>
     <script src="/js/nat.js?v=2016-02-03"></script>
 
