--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </p>
 
         <p class="f3 f2-l measure w8-l mt3">
-        My most well known creations are <a href="https://www.giftionary.city/">giftionary.city</a>, <a href="http://mood.natwelch.com/">mood.natwelch.com</a>, <a href="http://www.sadnat.com/">sadnat.com</a>, <a href="https://www.onesie.website/">Onesie</a> and <a href="https://github.com/fog/fog-google">fog-google</a>.
+        My most well known creations are <a href="https://www.giftionary.city/">giftionary.city</a>, <a href="http://mood.natwelch.com/">mood.natwelch.com</a>, <a href="http://www.sadnat.com/">sadnat.com</a>, <a href="https://www.onesie.website/">Onesie</a> and <a href="https://github.com/fog/fog-google">fog-google</a>. I also maintain some other semi-popular packages: <a href="https://github.com/icco/three-things">three-things</a> and <a href="https://github.com/icco/instagram-continued">instagram-continued</a>.
         </p>
 
         <p class="f3 f2-l measure w8-l mt3">
