--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- https://writing.natwelch.com/ -->
   </head>
   <body class="sans-serif">
-    <header class="pv0 ph3 pa4-m pa5-l oh pos-rel mt0-ns mt4">
+    <header class="pv0 ph3 ph4-m ph5-l oh pos-rel mt5">
       <div class="dt wi-100">
         <div class="dtc wi-50 v-mid">
           <div id="logo" class="v-mid mh0-ns dib-ns center ph0" style="width: 200px; height: 200px;"></div>
