--- a/index.html
+++ b/index.html
@@ -21,54 +21,8 @@
     <link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.8.1/css/tachyons.min.css"/>
-
-    <style>
-      img {
-        display: block;
-      }
-
-      ul.sentence {
-        padding: 0;
-        margin: 0;
-        text-align: left;
-        display: inline;
-        list-style: none;
-      }
-
-      ul.sentence li {
-        display: inline;
-        margin: 0;
-      }
-
-      ul.sentence li:after {
-        content: ", ";
-      }
-
-      ul.sentence li:last-child:after {
-        content: ".";
-      }
-
-      ul.sentence li:nth-last-child(2):after {
-        content: " & ";
-      }
-
-      /* Based on http://mrmrs.io/links/ */
-      a, a:link, a:visited {
-        transition: color .4s;
-        color: #265C83;
-        cursor: pointer;
-      }
-
-      a:hover {
-        color: #7FDBFF;
-      }
-
-      a:active {
-        transition: color .3s;
-        color: #007BE6;
-      }
-    </style>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.8.1/css/tachyons.min.css" />
+    <link rel="stylesheet" href="/css/extra.css" />
 
     <!-- Webmention -->
     <!-- https://writing.natwelch.com/ -->
@@ -124,8 +78,9 @@
         </p>
 
          <ul id="posts" class="f3 f2-l measure w8-l mt3">
+           <li><a href="https://www.packtpub.com/web-development/real-world-sre">Real World SRE</a> from Packt Publishing.</li>
            <li>Git Out The Vote: <a href="https://medium.com/git-out-the-vote/chatops-198f0b62c601">#chatops</a></li>
-           <li>Code Words: <a href="https://codewords.recurse.com/issues/six/promoting-reliability-in-web-software-companies">Promoting reliability in web software companies</a> &amp; <a href="https://codewords.recurse.com/issues/three/ddos-and-you">DDoS and You</a>.
+           <li>Code Words: <a href="https://codewords.recurse.com/issues/six/promoting-reliability-in-web-software-companies">Promoting reliability in web software companies</a> &amp; <a href="https://codewords.recurse.com/issues/three/ddos-and-you">DDoS and You</a>.</li>
         </ul>
 
       </div>
@@ -181,6 +136,6 @@
     <script src="/js/p5.dom.min.js"></script>
     <script src="/js/nat.js?v=2018-06-07"></script>
 
-    <!-- Copyright Nat Welch 2003 - 2017 -->
+    <!-- Copyright Nat Welch 2003 - 2019 -->
   </body>
 </html>
