--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="pv0 ph3 ph4-m ph5-l oh pos-rel mt5">
       <div class="dt wi-100">
         <div class="dtc wi-50 v-mid">
-          <div id="logo" class="v-mid mh0-ns dib-ns center ph0" style="width: 200px; height: 200px;"></div>
+          <div id="logo" class="v-mid mh0-ns dib-ns center ph0 logo"></div>
           <div class="dib v-mid pa0">
             <h1 class="mb2 tracked tl-ns tc w-100">Nat Welch</h1>
             <h2 class="fw2 mt0 tracked tl-ns tc w-100">Software Reconnaissance Engineer</h2>
