--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
     </section>
     </main>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-333449-2"></script>
     <script src="/js/jquery.min.js?v=2.2.0"></script>
     <script src="/js/moment.min.js?v=2.11.1"></script>
     <script src="/js/p5.min.js"></script>
     <script src="/js/p5.dom.min.js"></script>
-    <script src="/js/nat.js?v=2018-06-07"></script>
+    <script src="/js/nat.js?v=2018-06-27"></script>
 
     <!-- Copyright Nat Welch 2003 - 2019 -->
   </body>
