--- a/index.html
+++ b/index.html
@@ -136,6 +136,21 @@
     <script src="/js/p5.min.js"></script>
     <script src="/js/p5.dom.min.js"></script>
     <script src="/js/nat.js?v=2018-06-27"></script>
+    <!-- Fathom - simple website analytics - https://github.com/usefathom/fathom -->
+    <script>
+        (function(f, a, t, h, o, m){
+          a[h]=a[h]||function(){
+            (a[h].q=a[h].q||[]).push(arguments)
+          };
+          o=f.createElement('script'),
+            m=f.getElementsByTagName('script')[0];
+          o.async=1; o.src=t; o.id='fathom-script';
+          m.parentNode.insertBefore(o,m)
+        })(document, window, 'https://a.natwelch.com/tracker.js', 'fathom');
+        fathom('set', 'siteId', 'TSHXH');
+        fathom('trackPageview');
+    </script>
+    <!-- / Fathom -->
 
     <!-- Copyright Nat Welch 2003 - 2019 -->
   </body>
