update about me

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="fl-l wi-50-l ph3 pv4 pa3-m pa5-l">
         <h1 class="fw1 tracked">Who</h1>
         <p class="f3 f2-l measure w8-l mt3">
-        A <span id="age">30</span> year old from the San Francisco Bay Area, now living in Brooklyn and working for Google.
+        A <span id="age">30</span> year old from the San Francisco Bay Area, currently living in Brooklyn and working as a Site Reliability Engineer for Google's Customer Reliability Engineering team.
         </p>
       </div>
     </section>
